fix: prevent resource titles from overflowing

--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -176,9 +176,12 @@ main {
 main header h1 {
     font-size: 3rem;
     font-weight: 800;
+    -webkit-hyphens: auto;
+    hyphens: auto;
     line-height: calc(var(--fl-lineSpace-factor, 1) * 1.1458);
     margin: 2rem 0;
     text-transform: lowercase;
+    word-break: break-word;
 }
 
 main header .breadcrumbs + h1 {
@@ -639,9 +642,12 @@ aside h2 {
 .resources-main button .resources-title {
     border: 0.625rem solid var(--fl-buttonBgColor, var(--resourcesBGColor));
     border-inline-start: none;
+    -webkit-hyphens: auto;
+    hyphens: auto;
     padding: 0.25rem 1rem 0.25rem 0.5rem;
     text-align: start;
     width: 100%;
+    word-break: break-word;
 }
 
 .resources-main button.expanded .resources-title {
